Palindrome partitioning